# pusit

./: .gitignore  LICENSE  README.md
card-generator/: card-generator.ino  flash-sketch.sh
card-reader/: flash-data.sh
controller/: .gitignore  README.md
controller/src/: index.html  script.js  styles.css
controller/src-tauri/: Cargo.toml  tauri.conf.json
controller/src-tauri/icons/: icon.icns
controller/src-tauri/src/: main.rs
generator/: README.md  card-generator.ino
generator/src/: flash-sketch.sh  generator.ino
kiosk/: README.md  script.js
kiosk/src/: script.js  styles.css
reader/: README.md  reader.ino  terminal.ino
reader/src/: flash-sketch.sh  reader.ino
server/: Cargo.toml  README.md
server/src/: balance.rs  card.rs  main.rs  order.rs  product.rs  server.db-shm  server.db-wal
terminal/: flash-sketch.sh  monitor.sh  terminal.ino
terminal/data/: index.html  script.js  styles.css
